welcome.lessons.welcome.array.has271.Has271.scala.error
has271:8: error: missing arguments for method abs in object Math;
follow this method with `_' if you want to treat it as a partially applied function
			if( Math.abs(nums(k)-nums(k+2))=2) {
                                 ^